--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,27 @@ i {
     color: var(--icon-color);
 }
 
+b{
+    font-weight: 400;
+}
+
+h1{
+    font-size: 2.5rem;
+    font-weight: 200;
+}
+
+h1, h2, h3{
+    font-family: 'League Spartan', Tahoma, Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
+    color: var(--title-color);
+    font-weight: 200;
+}
+
+p{
+    font-size: 1.25rem;
+    text-align: justify;
+}
+
 .header{
     display: flex;
     flex-flow: row wrap;
@@ -143,15 +164,107 @@ i {
     gap: 1rem;
 }
 
+main{
+    padding: 2.5rem 1rem;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+}
+
+.main_content1{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.main_content2 iframe{
+    width: 100%;
+    aspect-ratio: 16/9;
+}
+
+.menu-social {
+    gap: 1rem;
+}
+
+.btn{
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.625rem;
+    border-radius: 3.125rem;
+    width: 100%;
+    padding: 0.875rem 1.5rem;
+    transition: ease-in-out .3s;
+}
+
+.btn:hover{
+    transform: scale(1.05);
+    transition: ease-in-out .3s;
+    cursor: pointer;
+}
+
+.btn--primary span {
+    color: var(--primary-color);
+}
+
+.btn--primary {
+    border: 1px solid var(--primary-color);
+}
+
+.btn span, .btn i {
+    font-size: 1.25rem;
+    text-transform: uppercase;
+}
+
+.skills{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1.25rem;
+    padding: 6.25rem 1rem 2rem 1rem;
+    background: var(--secondary-bg-color);
+    margin-top: -5.5rem;
+}
+
+.skills h2{
+    text-transform: none;
+    font-size: 2rem;
+}
+
+.skills__list{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    gap: .5rem;
+}
+
+.skills__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 4.8rem;
+    height: 4.8rem;
+    aspect-ratio: 1/1;
+    border: 1px solid var(--secondary-border-color);
+    border-radius: 50rem;
+}
+
+.skills__logo{
+    height: 2.4rem;
+}
+
 footer {
     margin-bottom: 5rem;
-  }
+}
   
-  footer p {
+footer p {
     font-size: .875rem;
     text-align: center;
     padding: 1rem;
-  }
+}
 
 @media (min-width: 768px){
 
@@ -175,15 +288,85 @@ footer {
         min-width: 30%;
     }
 
+    h1{
+        font-size: 4rem;
+    }
+
+    main{
+        padding: 8rem 6rem 4rem 6rem;
+    }
+
+    .main_content1 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .skills{
+        padding: 6.25rem 6rem 2rem 6rem;
+        margin-top: -6rem;
+    }
+
     footer {
         margin: 0;
-      }
+    }
+    
+}
+
+@media(min-width: 1200px){
+
+    main{
+        padding: 12rem 6rem 2rem;
+    }
+
+    .main_content1 .btn{
+        width: auto;
+    }
+
+    .skills{
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10rem 6rem 4rem 6rem;
+    }
+
+    .skills h2{
+        font-size: 3.5rem;
+        width: 60%;
+    }
+
+    .skills__item{
+        width: 6rem;
+        height: 6rem;
+    }
+
+    .skills__list{
+        gap: 1rem;
+    }
+
+    .skills__logo{
+        height: 3rem;
+    }
 }
 
 @media (min-width: 1400px){
+
+    h1{
+        font-size: 6.25rem;
+    }
+
+    p{
+        font-size: 1.5rem;
+    }
+
     .header{
-        position: fixed;
-        border-bottom: 1px solid var(--primary-border-color);
         padding: 1rem 15rem;
+    }
+
+    main{
+        padding: 12rem 15rem 2rem;
+    }
+
+    .skills{
+        padding: 10rem 15rem 4rem;
     }
 }
